Dodao slike mockupova i teksts ispod

--- a/index.html
+++ b/index.html
@@ -62,88 +62,84 @@
                 <li class="carousel__slide">
                     <figure>
                         <div>
-                            <img src="https://picsum.photos/id/1041/800/450" alt="">
+                           <img src="img/mockups/fon nakit.png" alt="Opis slike">
+
                         </div>
                         <figcaption>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            <span class="credit">Photo: Tim Marshall</span>
+                            Vaš nakit na elegantnom web prikazu.
+
                         </figcaption>
                     </figure>
                 </li>
                 <li class="carousel__slide">
                     <figure>
                         <div>
-                            <img src="https://picsum.photos/id/1043/800/450" alt="">
+                            <img src="img/mockups/laptop ciglice.png" alt="Opis slike">
                         </div>
                         <figcaption>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            <span class="credit">Photo: Christian Joudrey</span>                            
+                            Responsive dizajn za savršen vizuelni doživljaj.                           
                         </figcaption>
                     </figure>
                 </li>
                 <li class="carousel__slide">
                     <figure>
                         <div>
-                            <img src="https://picsum.photos/id/1044/800/450" alt="">
+                           <img src="img/mockups/komp ledi restoran.png" alt="Opis slike">
                         </div>
                         <figcaption>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            <span class="credit">Photo: Steve Carter</span>                            
+                            Restoran koji mami pogled i ukus – naš tim je kreirao sajt koji kombinuje vrhunski dizajn i funkcionalnost. Fokus na korisničko iskustvo, mobilnu optimizaciju i atraktivne vizuale.                           
                         </figcaption>
                     </figure>
                 </li>
                 <li class="carousel__slide">
                     <figure>
                         <div>
-                            <img src="https://picsum.photos/id/1045/800/450" alt="">
+                           <img src="img/mockups/laptop maske.png" alt="Opis slike">
                         </div>
                         <figcaption>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            <span class="credit">Photo: Aleksandra Boguslawska</span>                            
+                            Kombinacija trendi dizajna i jednostavne navigacije. Kreirali smo online iskustvo koje jasno prikazuje ponudu i olakšava kupovinu na svim uređajima.                          
                         </figcaption>
                     </figure>
                 </li>
                 <li class="carousel__slide">
                     <figure>
                         <div>
-                            <img src="https://picsum.photos/id/1049/800/450" alt="">
+                           <img src="img/mockups/laptop arch.png" alt="Opis slike">
                         </div>
                         <figcaption>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            <span class="credit">Photo: Rosan Harmens</span>                            
+                            Ekskluzivan odmor zaslužuje ekskluzivno digitalno iskustvo. Naš tim je kreirao rešenje koje inspiriše goste da rezervišu odmah.                         
                         </figcaption>
                     </figure>
                 </li>
                 <li class="carousel__slide">
                     <figure>
                         <div>
-                            <img src="https://picsum.photos/id/1052/800/450" alt="">
+                            <img src="img/mockups/komp brunchh.png" alt="Opis slike">
                         </div>
                         <figcaption>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            <span class="credit">Photo: Annie Spratt</span>                            
+                            Kreirali smo vizuelno primamljiv i intuitivan sajt koji poziva korisnike da istraže najbolje brunch destinacije u gradu.                           
                         </figcaption>
                     </figure>
                 </li>
             </ul>    
             <ul class="carousel__thumbnails">
-                <li>
-                    <label for="slide-1"><img src="https://picsum.photos/id/1041/150/150" alt=""></label>
+              <li>
+                    <label for="slide-1"><<img src="img/mockups/fon nakit.png" alt=""></label>
                 </li>
                 <li>
-                    <label for="slide-2"><img src="https://picsum.photos/id/1043/150/150" alt=""></label>
+                    <label for="slide-2"><<img src="img/mockups/laptop ciglice.png" alt=""></label>
                 </li>
                 <li>
-                    <label for="slide-3"><img src="https://picsum.photos/id/1044/150/150" alt=""></label>
+                    <label for="slide-3"><<img src="img/mockups/komp ledi restoran.png" alt=""></label>
                 </li>
                 <li>
-                    <label for="slide-4"><img src="https://picsum.photos/id/1045/150/150" alt=""></label>
+                    <label for="slide-4"><img src="img/mockups/laptop maske.png" alt=""></label>
                 </li>
                 <li>
-                    <label for="slide-5"><img src="https://picsum.photos/id/1049/150/150" alt=""></label>
+                    <label for="slide-5"><img src="img/mockups/laptop arch.png" alt=""></label>
                 </li>
                 <li>
-                    <label for="slide-6"><img src="https://picsum.photos/id/1052/150/150" alt=""></label>
+                    <label for="slide-6"><img src="img/mockups/komp brunchh.png" alt=""></label>
                 </li>
             </ul>
         </div>
